# LinuxCAD

./: .gitignore  BUILD.md  CHANGELOG.md  DEPLOYMENT.md  LAUNCH.md  LICENSE  README.md  RELEASES.md  RUST_DEV_TEAM_ITERATION_PROTOCOL.md  build-linuxcad.sh  install.command  install.ps1  install.sh  linuxcad  linuxcad-dev  pixi.toml  run  run.ps1  start.ps1  start.sh  update
.github/workflows/: desktop-build-matrix.yml  release-publish.yml
FreeCAD-main/src/Gui/LinuxCAD/: CommandPalette.cpp  CommandPalette.h  LinuxCadShell.cpp  LinuxCadShell.h  Project.h  TopBar.cpp  TopBar.h
FreeCAD-main/src/Mod/AddonManager/: .gitignore  AddonCatalog.schema.json  AddonCatalogCacheCreator.py  AddonManagerOptions.py  AddonManagerOptions.ui  AddonManagerOptions_AddCustomRepository.ui  AddonStats.py  MacroCacheCreator.py  NetworkManager.py  PySideWrapper.py  addonmanager_connection_checker.py  addonmanager_freecad_interface.py  addonmanager_git.py  addonmanager_icon_utilities.py  addonmanager_installation_manifest.py  addonmanager_macro.py  addonmanager_package_details_controller.py  addonmanager_preferences_migrations.py  addonmanager_python_deps.py  addonmanager_uninstaller.py  addonmanager_update_all_gui.py  addonmanager_workers_startup.py  compact_view.ui  composite_view.py  main.py  package_details.ui  package_list.py  progress.ui
FreeCAD-main/src/Mod/BIM/: Arch.py
backend-rust/: Cargo.toml  Makefile  README.md  build.sh  package-lock.json  package.json
backend-rust/docs/: STL_IMPORT_EXPORT.md
backend-rust/examples/: stl_example.rs
backend-rust/src/: benchmarks.rs  boolean.rs  constraint.rs  geometry.rs  import_export.rs  lib.rs  main.rs  sketch.rs  types.rs
backend-rust/src/api/: boolean.rs  capabilities.rs  geometry.rs  import_export.rs  mod.rs  sketch.rs
branding/: apply-branding.sh
branding/design-reference/: CAD_FEATURE_ANALYSIS.md  README.md  RUST_INTEROP_TEST_MATRIX.md  VIEWPORT_OPTIMIZATION.md
branding/icons/: README.md  build-icons.sh  variant-def-notes.md
engine/: LINUXCAD.md  pixi.toml
engine/cMake/: FreeCadMacros.cmake
engine/cMake/FreeCAD_Helpers/: CreatePackagingTargets.cmake
engine/src/Gui/: Application.cpp  CMakeLists.txt  MainWindow.cpp  OverlayManager.cpp  OverlayWidgets.cpp  OverlayWidgets.h  SoFCDB.cpp  SplashScreen.cpp  View3DSettings.cpp
engine/src/Gui/Dialogs/: AboutApplication.ui  DlgAbout.cpp
engine/src/Gui/Icons/: resource.qrc
engine/src/Gui/LinuxCAD/: CMakeLists.txt  CheatSheet.cpp  CheatSheet.h  CommandPalette.cpp  CommandPalette.h  FirstRunWizard.cpp  FirstRunWizard.h  LinuxCadShell.cpp  LinuxCadShell.h  LinuxCadStart.cpp  LinuxCadStart.h  MiniToml.cpp  MiniToml.h  NaviCubeDefaults.cpp  NaviCubeDefaults.h  Project.cpp  ProjectManager.cpp  ProjectManager.h  ProjectManagerDock.cpp  ProjectManagerDock.h  Ribbon.cpp  Ribbon.h  Shortcuts.cpp  Shortcuts.h  Theme.cpp  Theme.h  ThemePicker.cpp  ThemePicker.h  TopBar.cpp  TopBar.h  ViewWidgetsOverlay.cpp  (+5 more)
engine/src/Main/: MainGui.cpp
engine/src/Mod/AddonManager/: ALLOWED_PYTHON_PACKAGES.txt  Addon.py  AddonCatalog.py  AddonManager.py  CMakeLists.txt  Init.py  InitGui.py  PythonDependencyUpdateDialog.ui  README.md  SECURITY.md  TestAddonManagerApp.py  TestAddonManagerGui.py  add_toolbar_button_dialog.ui  addonmanager_dependency_installer.py  addonmanager_firstrun.py  addonmanager_installer.py  addonmanager_installer_gui.py  addonmanager_licenses.py  addonmanager_macro_parser.py  addonmanager_metadata.py  addonmanager_preferences_defaults.json  addonmanager_python_deps_gui.py  addonmanager_readme_controller.py  addonmanager_toolbar_adapter.py  addonmanager_uninstaller_gui.py  addonmanager_utilities.py  addonmanager_workers_utility.py  compact_view.py  dependency_resolution_dialog.ui  expanded_view.py  expanded_view.ui  first_run.ui  package.xml  proxy_authentication.ui  select_toolbar_dialog.ui  toolbar_button.ui  update_all.ui
engine/src/Mod/AddonManager/AddonManagerTest/: run_app_tests.py  run_gui_tests.py
engine/src/Mod/AddonManager/AddonManagerTest/app/: test_addon.py  test_addoncatalog.py  test_freecad_interface.py  test_git.py  test_macro.py  test_macro_cache_creator.py  test_macro_parser.py  test_metadata.py  test_python_deps.py  test_uninstaller.py
engine/src/Mod/AddonManager/AddonManagerTest/data/: depends_on_all_workbenches.xml
engine/src/Mod/AddonManager/AddonManagerTest/gui/: test_installer_gui.py  test_update_all_gui.py  test_widget_package_details_view.py  test_widget_progress_bar.py  test_widget_readme_browser.py  test_widget_view_selector.py
engine/src/Mod/AddonManager/Resources/: CMakeLists.txt
engine/src/Mod/AddonManager/Resources/icons/: CMakeLists.txt
engine/src/Mod/AddonManager/Resources/licenses/: CMakeLists.txt
engine/src/Mod/AddonManager/Resources/translations/: AddonManager_be.qm  AddonManager_ca.ts  AddonManager_da.qm  AddonManager_da.ts  AddonManager_de.ts  AddonManager_el.qm  AddonManager_el.ts  AddonManager_es-AR.qm  AddonManager_es-CO.qm  AddonManager_es-CO.ts  AddonManager_es-ES.qm  AddonManager_es-VE.qm  AddonManager_eu.qm  AddonManager_fr.qm  AddonManager_fr.ts  AddonManager_hu.ts  AddonManager_it.ts  AddonManager_ja.ts  AddonManager_ka.ts  AddonManager_pl.qm  AddonManager_pt-BR.qm  AddonManager_pt-BR.ts  AddonManager_pt-PT.qm  AddonManager_pt-PT.ts  AddonManager_ru.ts  AddonManager_sr-SP.qm  AddonManager_sv.qm  AddonManager_sv.ts  AddonManager_uk.qm  AddonManager_uk.ts  AddonManager_zh-CN.qm  AddonManager_zh-TW.ts  CMakeLists.txt  run_translation_cycle.py
engine/src/Mod/AddonManager/Widgets/: CMakeLists.txt  addonmanager_colors.py  addonmanager_widget_addon_buttons.py  addonmanager_widget_package_details_view.py  addonmanager_widget_view_control_bar.py  addonmanager_widget_view_selector.py  spinner.py
frontend/: package.json
frontend/scripts/: electron-build.cjs
packaging/: NOTICES.md
packaging/linux/: build-appimage.sh  build-deb.sh  org.linuxcad.LinuxCAD.desktop
packaging/macos/: build-dmg.sh
packaging/windows/: build-nsis.ps1  build-zip.ps1
patches/: README.md
scripts/: install-linux-deps.sh  validate-build-path.sh
(+88 files in other folders)
