[package]
name = "linuxcad-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mathematics and geometry
nalgebra = "0.32"
parry3d-f64 = "0.13"
lyon = "1.0"

# Computational geometry
geo = "0.27"
rstar = "0.11"
rayon = "1.8"

# Optimization for constraint solving
argmin = "0.9"
argmin-math = "0.3"

# File I/O and mesh processing
tobj = "4.0"
ply-rs = "0.1"
stl_io = "0.7"

# Async and utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional dependencies for benchmarks and demos
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
sysinfo = "0.30"

[dev-dependencies]
tempfile = "3.8"

# Optional: OpenCASCADE bindings (if available)
# opencascade = { git = "https://github.com/bschwind/opencascade", optional = true }

[features]
default = []
opencascade = []

[[bin]]
name = "server"
path = "src/main.rs"